--- a/dentition.html
+++ b/dentition.html
@@ -23,7 +23,7 @@
             <div class="panel">
                 <p>Both the distal and buccal (inside and outside) edges of the molars are bowl-shaped. </p>
                 <p>The molars have less enamel thickness than chimpanzees, but more than Australopiths. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets included softer foods than chimpanees.</p>
-                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence than chimpanzees. This, again, implies they ate softer foods than modern chimps, as modern chimps need more muscle for chewing rougher foods.</p>
+                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence than chimpanzees. This, again, implies they ate softer foods than modern chimps, as modern chimps need more surface area for larger jaw muscles used to chew rougher foods.</p>
             </div>
             <img src="lucy jaw.jpg" alt="Australopithecus afarensis jaw">
             <p class="caption">Model A. <em>afarensis</em>(Lucy) jaw.</p>
@@ -35,13 +35,12 @@
                 <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from a V-shape to a U-shape.<br><br>The molars are large like chimps, with buccal asymmetry somehwere betweens chimps and Australopiths.</p>
             </div>
             <img src="ardi-head.jpg">
-            <p class="caption">Model Ardipithecus <em>ramidus</em> head. Notice the direction the incisors point in is most aligned with the pre-molars.</p>
+            <p class="caption">Model Ardipithecus <em>ramidus</em> head. Notice the direction the canines point in is most aligned with the pre-molars.</p>
             <img src="lucy-head.jpg">
-            <p class="caption">Model Australopithecus <em>afarensis</em> (Lucy) head.</p>
+            <p class="caption">Model Australopithecus <em>afarensis</em> (Lucy) head. Notice the canines are more rotated, with the inside closer to the tongue.</p>
             <div class="panel">
                 <h2>Incisors and canines</h2>
-                <p>The incisoral size is between a chimp and Australopith.<br><br>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
-                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue) [See above photos].<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.<br><br>Dr. Tim D. White, Gen Suwa, and other researchers propose that canine sexual dimorphism was human-like.</p>
+                <p>The incisoral size is between a chimp and Australopith (but still large compared to humans).<br><br>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> The canines have a different thickness than both chimpanzees and Australopiths. They are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue) [See above photos].<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors yet.<br><br>Dr. Tim D. White, Gen Suwa, and other researchers proposed in 2019 that canine sexual dimorphism was human-like.</p>
             </div>
             <div class="panel">
                 <p>Next up: Ar. <em>ramidus</em>'s skull.</p>
@@ -51,7 +50,7 @@
                 <a href="skull.html"><button>Next ></button></a>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
