--- a/discovery.html
+++ b/discovery.html
@@ -12,7 +12,7 @@
             </nav>
             <div class="panel">
                 <h2>Discovery</h2>
-                <p>Gen Suwa, former anthropology graduate student at UC Berkley, traveled to Aramis in the Middle Awash region of Ethiopia in 1992 to research.<br><br>
+                <p>Gen Suwa, former anthropology graduate student at UC Berkeley, traveled to Aramis in the Middle Awash region of Ethiopia in 1992 to conduct anthropologic research.<br><br>
                     While walking around Aramis, he noticed something shiny in the rocks.
                 </p>
             </div>
@@ -22,14 +22,14 @@
                 <p>Upon closer inspection of the shining rock, Suwa noticed it was not a rock at all—in fact, it was a hominin tooth root.</p>
             </div>
             <img src="tooth.jpg" alt="A tooth root discovered by the archeologist team at Aramis in 1994.">
-            <p class="caption">A juvenile hominin jaw discovered by the team Gen Suwa was part of at Aramis, Ethiopia in 1994 (ARA-VP-1/129).</p>
+            <p class="caption">A juvenile hominin jaw discovered by the team Gen Suwa was part of at Aramis, Ethiopia in 1994 (ARA-VP-1/129) [See above].</p>
             <div class="panel">
-                <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils.<br><br>In the following days, they found an additional hominin jaw piece with a baby tooth (deciduous molar) [ARA-VP-1/129].<br><br>The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. afarensis, which was the oldest known hominin at the time.</p>
+                <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils.<br><br>In the following days, they found an additional hominin jaw piece with a baby tooth (deciduous molar) [ARA-VP-1/129].<br><br>The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. <em>afarensis</em>, which was the oldest known hominin at the time.</p>
             </div>
             <img src="gona.jpg" alt="The desert in the Middle Awash region of Ethiopia">
             <p class="caption">The desert in the Middle Awash region of Ethiopia.</p>
             <div class="panel">
-                <p>Two months later, UC Berkley graduate student, Yohannes Haile-Selassie, spotted hand bones in the soil nearby.<br><br>
+                <p>Two months later, UC Berkeley graduate student, Yohannes Haile-Selassie, spotted something else at Aramis: fossilized hand bones.<br><br>
                     As the archaeological team searched the area, they found bone after bone: part of a pelvis, leg bones, an ankle, a foot, a hand, an arm, another jaw with teeth, a cranium. By January 1995, the team had unearthed almost an entire skeleton.<br><br>
                     The remains were incredibly brittle, some crumbling as they held them. The scientists were afraid the fossil would wither away as they unearthed it.<br><br>They began cutting the ground around the skeleton. In one large chunk, the skeleton was shipped off to the  National Museum of Ethiopia for careful removal from the 4.4 -million-year-old soil.<br><br>As the skeleton was removed, its pieces were carefully cast and scanned to be recreated digitally. 10 models later, Gen Suwa felt satisfied with his digitally reconstructed skull. And 14 models later, anatomist C. Owen Lovejoy of Kent State University felt satisfied with his reconstructed pelvis.
                     </p>
@@ -44,7 +44,7 @@
                 <a href="important-fossils.html"><button>Next ></button></a>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
