--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="discovery.html"><button>Enter</button></a>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
