--- a/phylogeny.html
+++ b/phylogeny.html
@@ -12,7 +12,7 @@
             </nav>
             <div class="panel">
                 <h2>Phylogeny</h2>
-                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place.<br><br>The following phylogenic tree is from a <a href="https://doi.org/10.1017/pab.2019.12">2019 study on hominin phylogeny</a> at Cambridge University.<br><br>Notice how Ar. <em>ramidus</em> has its own branch.</p>
+                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place.<br><br>The following phylogenic tree is based on a <a href="https://doi.org/10.1017/pab.2019.12">2019 study on hominin phylogeny</a> at Cambridge University.<br><br>Notice how Ar. <em>ramidus</em> has its own branch.</p>
             </div>
             <div class="panel" style="overflow-x:auto;" hidden>
                 <img src="whole_tree.svg" style="width: 1000px; height: 700px; object-fit: fill;">
@@ -136,7 +136,7 @@
                 <a href="conclusion.html"><button>Next ></button></a>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
