--- a/skull.html
+++ b/skull.html
@@ -19,14 +19,14 @@
                 <ul>
                     <li>Foramen magnum position (hole on bottom)</li>
                     <li>Brain case shape</li>
-                    <li>Face prominence</li>
+                    <li>Facial prominence</li>
                 </ul>
             </div>
             <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Skull without mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e37e3a49c95d477ba54f8f55421f8e3f/embed"></iframe></div><p class="caption">3D model homo sapiens (human) skull.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div><p class="caption">3D model Ar. <em>ramidus</em> skull.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width="100%" height="450px" title="Female Chimp Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/52cb71658a4b46fca43d443c9a91292e/embed"></iframe></div><p class="caption">3D model modern chimpanzee skull.</p>
             <div class="panel">
-                <p>These features indicate upright posture in Ar. ramidus. The location of the foreamen magnum towards the underside and thickened basioccipital area helps the spine support the weight of a the head while standing bipedally.<br><br>These features are known as "derived traits"—traits shared with other bipedal hominins and humans.</p>
+                <p>The location of the foreamen magnum towards the underside and thickened basioccipital area helps the spine support the weight of a the head while standing bipedally. These traits indicate upright posture in Ar. ramidus.<br><br>These features are called "derived traits"—features shared with other bipedal hominins and humans.</p>
             </div>
             <div class="panel">
                 <p>Up next: Other distinguishing features of Ar. <em>ramidus</em>.</p>
@@ -36,7 +36,7 @@
                 <a href="species.html"><button>Next ></button></a>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
