--- a/conclusion.html
+++ b/conclusion.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
