--- a/important-fossils.html
+++ b/important-fossils.html
@@ -12,7 +12,7 @@
             </nav>
             <div class="panel">
                 <h2>Important fossils</h2>
-                <p>The fossils found of Ar. <em>ramidus</em>, as found by the Middle Awash research team, are listed below.</p> 
+                <p>Some important fossils found of Ar. <em>ramidus</em>, found by the Middle Awash research team, are listed below.</p> 
             </div>
             <div class="panel">
                 <h2>1992-1994: Teeth</h2>
@@ -25,7 +25,7 @@
                 <h2>1994-1995: Ardi</h2>
                 <img src="ardi unsorted.jfif" alt="The unsorted fossilized bones of an Ardipithecus ramidus.">
                 <img src="ardi displayed.jpeg" alt="The sorted bones of Ardi">
-                <p>Over three field seasons, the partial skeleton of an Ardipithecus <em>ramidus</em> female nicknamed "Ardi" was unearthed from Aramis, Ethiopia.<br><br>The skeleton was carefully removed from its 4.4-million-year-old soil after being shipped to the National Museum Ethiopia.<br><br>It took 17 years (until 2009) for scientists to digitally recreate the extremely fragile skeleton and annouce it was a new species.<br><br> With over million years seniority over Lucy, this is the oldest hominin fossil find to date.</p>
+                <p>Over three field seasons, the partial skeleton of an Ardipithecus <em>ramidus</em> female nicknamed "Ardi" was unearthed from Aramis, Ethiopia.<br><br>The skeleton was carefully removed from its 4.4-million-year-old soil after being shipped to the National Museum Ethiopia.<br><br>It took 17 years (until 2009) for scientists to digitally recreate the extremely fragile skeleton and annouce it was a new species.<br><br> With over million years seniority over Lucy, this is the oldest most-complete hominin fossil find to date.</p>
             </div>
             <div class="panel">
                 <p>Next up: A map showing locations where Ar. <em>ramidus</em> was found.</p>
@@ -35,7 +35,7 @@
                 <a href="map.html"><button>Next ></button></a>
             </div>
             <footer>
-                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+                <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
         </body>
     </html>
