--- a/conclusion.html
+++ b/conclusion.html
@@ -25,6 +25,9 @@
                     <a href="phylogeny.html"><button>Phylogeny</button></a>
                 </div>
             </div>
+            <div class="panel">
+                
+            </div>
             <footer>
                 <p style="color: #fff; text-align: center;">Hana Donnelly</p>
             </footer>
