--- a/environment.html
+++ b/environment.html
@@ -21,7 +21,7 @@
             <p class="caption">The Awash River in the now-arid Middle Awash region of Ethiopia.</p>
             <div class="panel">
                 <h2>Grassy woodslands or wooded grasslands?</h2>
-                <p>For years, researchers have debated what kind of environment Ar. <em>ramidus</em> lived in.<br><br>They had an idea of what kind of animals lived in the area based on soil analyses. They also knew that Ardi's fossil had traits like a moveable big toe and long pelvis allowing for adept climbing. But they weren't sure where, or if, the savanna hypothesis fit in.<br><br>Based on analyses of soil and fossils from the Middle Awash region, researchers have come up with two proposals of Ardi's habitat.</p>
+                <p>For years, researchers have debated what kind of environment Ar. <em>ramidus</em> lived in.<br><br>They had an idea of what kind of animals lived in the area from other mammalian fossils. They also knew that Ardi's fossil had traits like a moveable big toe and long pelvis allowing for adept climbing. But they weren't sure where, or if, the savanna hypothesis fit in.<br><br>Based on analyses of soil and fossils from the Middle Awash region, researchers have come up with two proposals of Ardi's habitat.</p>
             </div>
             <img src="kruger-national-park.webp" alt="The wooded grasslands of Kruger National Park.">
             <p class="caption">Wooded grasslands in Kruger National Park, South Africa.</p>
