--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
                 <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
-                <h2>Mobile Virtual Museum: Ardipithecus <em>ramidus</em></h2>
+                <h2>Mobile virtual museum: Ardipithecus <em>ramidus</em></h2>
             </div>
             <img src="hadar-mobile.jpg" alt="Paleoanthropologists unearth fossils in Hadar, Ethiopia">
+            <p class="caption">Paleoanthropologists unearth fossils in Hadar, Ethiopia in 2009.</p>
             <div class="panel">
                 <p>Ardipithecus ramidus changed the field of anthropology in 2009, when analysis on a near-complete 4.4-million-year-old fossilized skeleton from Ethiopia was published.<br><br>
                     Enter this virtual museum exhibit to learn more about this fascinating hominin.<br><br>
