--- a/skull.html
+++ b/skull.html
@@ -15,7 +15,7 @@
                 <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).<br><br>The brain case of Ar. <em>ramidus</em> is similar to a modern chimpanzee, around 300-350 cubic centimeters. This cavity is more ovular in chimpanzees, and more circular in Australopiths and humans.<br><br>The face lacks the prognathism found in modern African apes.</p>
             </div>
             <div class="panel">
-                <p>Note the following features the 3d models below:</p>
+                <p>Note the difference in the following features between the 3d models below:</p>
                 <ul>
                     <li>Foramen magnum position (hole on bottom)</li>
                     <li>Brain case shape</li>
