--- a/species.html
+++ b/species.html
@@ -22,20 +22,22 @@
             <img src="ardi-lucy-pelvis.jpeg" alt="Ardi's pelvis and Lucy's pelvis">
             <p class="center">Ardi's pelvis (white) overlaid with Lucy's pelvis (yellow).</p>
             <div class="panel">
-                <p>The ilium became wider and shorter, the sacroiliac joint more posterior, and the lower spine more curved. Compared to Lucy’s pelvis, Ardi has a longer lower pelvis and less robusticity.</p>
+                <p>Compare the following labeled human pelvis with the 3 hominin pelvises below.</p>
             </div>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Female Pelvis, 32yo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/84ebbcbd54c34037bdd95ca187b51c05/embed?ui_infos=0"> </iframe></div>
+            <img src="labeled-pelvis.jpg" alt="Labeled drawing of a pelvis">
+            <p class="caption">A human pelvis labeled by part.</p>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="500px" title="Female Pelvis, 32yo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/84ebbcbd54c34037bdd95ca187b51c05/embed?ui_infos=0"> </iframe></div>
             <p class="caption">Homo <em>sapiens</em> (human) pelvis.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Ardi Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/776fbe5c0c164998849f26f51776265b/embed"> </iframe></div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="500px" title="Ardi Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/776fbe5c0c164998849f26f51776265b/embed"> </iframe></div>
             <p class="caption">Ardipithecus <em>ramidus</em> pelvis.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Lucy Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/bf5e316dad5d4f7bb75fbb104473e637/embed"> </iframe> </div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="500px" title="Lucy Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/bf5e316dad5d4f7bb75fbb104473e637/embed"> </iframe> </div>
             <p class="caption">Australopithecus <em>afarensis</em> (Lucy) pelvis.</p>
             <div class="panel">
-                <p>These traits are indicative of bipedalism as they allow for better lower-limb-muscle attachment points for ease moving bipedally.</p> 
+                <p>In Ar. <em>ramidus</em>, the ilium is wider and shorter, the sacroiliac joint more posterior, and the lower spine more curved. Compared to Lucy’s pelvis, Ardi has a longer lower pelvis and less robusticity.<br<br>These traits are indicative of bipedalism as they allow for better lower-limb-muscle attachment points for ease moving bipedally.</p> 
             </div>
             <div class="panel">
                 <h2>Arms</h2>
-                <p>The trochlear notch on the ulna is more rear-facing than that of other extinct hominins.<br><br>In addition to these, Ardi's wrists are more flexible than those of other apes, allowing the flexible palms to grab branches instead of the fingers. The radius of Ar. <em>ramidus</em>> does not have features that imply knuckle-walking. Its forarms also lack adaptations seen in other apes supporting vertical climbing and forearm suspension.</p>
+                <p>The trochlear notch on the ulna is more rear-facing than that of other extinct hominins.<br><br>In addition to these, Ardi's wrists are more flexible than those of other apes, allowing the flexible palms to grab branches instead of the fingers. The radius of Ar. <em>ramidus</em> does not have features that imply knuckle-walking. Its forarms also lack adaptations seen in other apes supporting vertical climbing and forearm suspension.</p>
             </div>
             <img src="ardi hand 2.jpg" alt="Artist rendition of what an Ar. ramidus hand looked like.">
             <p class="caption">Artist rendition of what an Ar. <em>ramidus</em> hand looked like.</p>
