--- a/conclusion.html
+++ b/conclusion.html
@@ -25,8 +25,8 @@
                     <a href="phylogeny.html"><button>Phylogeny</button></a>
                 </div>
             </div>
-            <div class="panel">
-                
+            <div id="references" class="panel">
+                <a href="references.pdf"><button>References PDF</button></a>
             </div>
             <footer>
                 <p style="color: #fff; text-align: center;">Hana Donnelly</p>
