--- a/discovery.html
+++ b/discovery.html
@@ -34,7 +34,8 @@
                     The remains were incredibly brittle, some crumbling as they held them. The scientists were afraid the fossil would wither away as they unearthed it.<br><br>They began cutting the ground around the skeleton. In one large chunk, the skeleton was shipped off to the  National Museum of Ethiopia for careful removal from the 4.4 -million-year-old soil.<br><br>As the skeleton was removed, its pieces were carefully cast and scanned to be recreated digitally. 10 models later, Gen Suwa felt satisfied with his digitally reconstructed skull. And 14 models later, anatomist C. Owen Lovejoy of Kent State University felt satisfied with his reconstructed pelvis.
                     </p>
             </div>
-            <img src="ardi-excavation.jpeg" alt="">
+            <img src="ardi-excavation.jpeg" alt="Diagram and photo collage of the unearthing of Ardi.">
+            <p class="caption">Diagram and photo collage of the 2009 unearthing of Ardi.</p>
             <p class="caption"></p>
             <img hidden src="pelvis-recreation.jpg" alt="A computer-recreated Ar. ramidus pelvis. Digitally-recreated ar. ramidus pelvis from the University Museum at the University of Tokyo, where Gen Suwa is a professor.">
             <p hidden class="caption">Digitally-recreated ar. ramidus pelvis from the University Museum at the University of Tokyo, where Gen Suwa is a professor.</p>
