--- a/dentition.html
+++ b/dentition.html
@@ -19,14 +19,14 @@
                 <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than to molars of more recently fossilized hominins (like Lucy).</p>
             </div>
             <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
-            <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <u>d, Australopithecus ramidus (APA-VP-1/129);</u> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
+            <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus (bonobo); c, Pan troglodytes (chimpanzee); <b>d, Australopithecus ramidus (APA-VP-1/129);</b> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
             <div class="panel">
                 <p>Both the distal and buccal (inside and outside) edges of the molars are bowl-shaped. </p>
                 <p>The molars have less enamel thickness than chimpanzees, but more than Australopiths. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets included softer foods than chimpanees.</p>
-                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence than chimpanzees. This, again, implies they ate softer foods than modern chimps, as modern chimps need more jajw surface area for larger jaw muscles used to chew rougher foods.</p>
+                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence than chimpanzees. This, again, implies they ate softer foods than modern chimps, as modern chimps need more jaw surface area for larger jaw muscles used to chew rougher foods.</p>
             </div>
             <img src="lucy jaw.jpg" alt="Australopithecus afarensis jaw">
-            <p class="caption">Model A. <em>afarensis</em>(Lucy) jaw.</p>
+            <p class="caption">Model A. <em>afarensis</em> (Lucy) jaw.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width=100%;  height=450px; title="Ardipithecus ramidus (2501.1rp96-2) - mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/fa656a356b1d47d6a97881e63f10fdb8/embed"></iframe></div><p class="caption">3D model of Ardipithecus <em>ramidus</em> jaw.</p>
             <img src="chimp jaw.jpg" alt="Modern chimpanzee jaw.">
             <p class="caption">Model modern chimpanzee jaw.</p>
